# fndg

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: release.yml
src/: defs.h  main.c  search.c  search.h  traverse.c  traverse.h
